--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,26 @@
     margin-left: 18px;
     cursor: pointer;
 }
+/*imposto le propietà della lista*/
+.todos-container {
+    width: 65%;
+    margin: auto;
+    background-color: #afefef;
+    padding: 22px;
+}
+.todos-list {
+    list-style-type: none;
+}
+.todos-list .todo {
+    border-bottom: 1px solid rgb(7, 25, 181);
+    padding: 12px;
+    font-size: 18px;
+    display: flex;
+    justify-content: space-between;
+}
+.todos-list .todo .actions span {
+    cursor: pointer;
+}
+.sbarrList{
+    text-decoration: line-through;
+}
